# ChangeLog for app-misc/cds-meta
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -cds-meta-10.0.ebuild, -cds-meta-10.0.1.ebuild, -cds-meta-10.2-r1.ebuild,
  -cds-meta-10.3.91.ebuild:
  Remove old meta packages.

*cds-meta-10.4 (05 Apr 2010)

  05 Apr 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cds-meta-10.4.ebuild:
  Bump version.

*cds-meta-10.3.91 (01 Apr 2010)

  01 Apr 2010; Трацевский Александр
  <atratsevskiy@gentoo.org> +cds-meta-10.3.91.ebuild:
  Added cds-meta-10.3.91.ebuild

  26 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  cds-meta-10.0.ebuild:
  Added sys-fs/xfsdump package to cds-meta-10.0

  23 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +cds-meta-10.0.ebuild,+metadata.xml:
  Meta package for CDS.