@@ -1,3 +1,3 @@
-EBUILD cds-meta-10.4.ebuild 3797 RMD160 9f80113062968f65f35573aaba5adf628f8ee57d SHA1 8f7aa835f255b516b39b0defc55e419eefd64f40 SHA256 c349d6cdc15da7b9c9e81da5959c49823d41302a7efa11fc35e8890e6ccece05
-MISC ChangeLog 872 RMD160 604d0d59ee9919a7eaead072cb21f7b76f7813ff SHA1 7e66f61b7e00e3de586bce67f6a172b26dd7e746 SHA256 6c66719430b6b635556b974c718a0412b0d31c04386b09ae725d914083b6c912
+EBUILD cds-meta-10.4.ebuild 3798 RMD160 3648732fe12ef9e8c89cbe447fd3954995223077 SHA1 76a478e9952d115b2996fa967ed3a61c7f7f4a46 SHA256 df4eb8931c0ad49b3819ddee617840ecb0f8257728392fcf7dffd2c2c1efd1cf
+MISC ChangeLog 1003 RMD160 0e6b9ce293b2ad20bd4b6287ecd7830d311253b6 SHA1 1630d29dd6e5fe1fc7568ad70ed81f72c5288910 SHA256 fc29d81e8b4989c17317c1e1080c47b127058dcdbc4e7be3550bf65bb6b5bf21
 MISC metadata.xml 260 RMD160 6945f0c9b210fe3068c6e5a6f7d5071cf9043369 SHA1 49f5ce48babea34bb39ff3f0d9d7c3adf9665da2 SHA256 74bbb85f1ec54eab72a905a78ffd5ac51bc7c3f64e9731418aa68f773d2bfba8
