@@ -10,5 +10,5 @@ sys-auth/consolekit policykit
 sys-block/gparted dmraid fat jfs ntfs reiserfs xfs
 gnome-base/gnome-applets gstreamer
 gnome-base/gnome-session policykit
-sys-apps/parted device-mapper
+sys-block/parted device-mapper
 dev-lang/python sqlite
