@@ -37,10 +37,10 @@ net-proxy/havp
 net-proxy/squid
 sci-libs/fftw
 sys-apps/calculate-server
-sys-apps/parted
 sys-apps/smartmontools
 sys-auth/nss_ldap
 sys-auth/pam_ldap
+sys-block/parted
 sys-block/tw_cli
 sys-fs/xfsdump
 sys-power/nut
