@@ -1,5 +1,5 @@
 EBUILD calculate-install-2.2.0.0_p20100812-r1.ebuild 516 RMD160 f68ffc6639ef15d4fee8c820e40ed38c25ad0a24 SHA1 5fbc5821ff69b54f7ea946ee1f84684a97c6b4a3 SHA256 71aa21a9bbc33a77fdeae0f9440a994e1bcedf4904afca2c30e32619ed2c7ea8
-EBUILD calculate-install-2.2.0.0_p20100819.ebuild 689 RMD160 2d564e0405b0f40c1adc5e19fd081fe11dc67507 SHA1 8fd0a164879bb341b58ed700755821ca20a45114 SHA256 6ee2ddf475e666485259b9c74bedddbd503a37fac3cd14a271ea8bfe50bcc8f3
+EBUILD calculate-install-2.2.0.0_p20100819.ebuild 690 RMD160 8930a6963343996dcb0e4bfa568221299245fc13 SHA1 8802cc397f19130599ec1f6185da855955b34229 SHA256 e7a781804dec8913b17e10e677cf4d1ac4a9e60e7dc67e66f41536c80e83f961
 EBUILD calculate-install-2.2.9999.ebuild 540 RMD160 038eb80ed7ab1120e6305cbfe2eca480a48aa1c0 SHA1 0cc13d21f94d71f0e6bb6dce3e8abfa1f2f66a4f SHA256 7f9bd4b0b6c2fa260f2e93c78fdee24b32545dc2a98e19363f4933dcc32d3557
-MISC ChangeLog 2396 RMD160 6ed9ad72a0645c772432c0caa345febbd24bc0ae SHA1 3b55c4e199fafd2bf4208e91e7a28e1db38e1ea4 SHA256 f244dacabfdfb58604f9d2bb7bcb1df359e6db4376cd7a0dcc033d163f632e5e
+MISC ChangeLog 2550 RMD160 233e96e858c565167c543a6518d67b3be78abe0b SHA1 7a7bd7dbde7edfeef1d51004cd24183723e875f5 SHA256 e7b500064107ead634bddb4a30494f7b61df9f857ebf2fc452ec714eec32970b
 MISC metadata.xml 310 RMD160 769e4f17a9354da6b168b72a5d65d978f65bf6dd SHA1 83aaae376052d69c7327e880cf028ebc0dea608b SHA256 c29d3efc676d8308872920db5223c78469db86ac236b5d45c3ee98ceb8fca846
