@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  calculate-install-2.2.0.0_p20100819.ebuild:
+  Changed dependence for sys-block/parted
+
 *calculate-install-2.2.0.0_p20100817 (18 Aug 2010)
 
   18 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
