@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  21 Aug 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  cds-meta-10.4.ebuild:
+  Modify dependence for sys-block/parted
+
   16 Jun 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
   -cds-meta-10.0.ebuild, -cds-meta-10.0.1.ebuild, -cds-meta-10.2-r1.ebuild,
   -cds-meta-10.3.91.ebuild:
